--- a/VRChat/57/1306657.html
+++ b/VRChat/57/1306657.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "g/NnN7lL5AMHdhL/Axvswt0TnlXFUZoSvHmysdjFscw="></script>
+    "hx+rfrQRxHc8D50fZ3sh0qpxqdRfeDSxHObKhuEvhlg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバーBOXパーティクル【VRChat向け】","description":"サイバーなエフェクトでよく見る四角いやつをパーティクルでサクッと作りました。\nフレームのみと塗りつぶされている奴があるのでいい感じに使ってください。\n\n内容物\nUnitypackage\n\nUnitypackage内訳\nテクスチャ：2枚\nマテリアル：2個\nパーティクルprefab：2個\n\n参考動画\nhttps://twitter.com/_FLEY_/status/1114480733978943491\n\n【利用規約】\n特に利用制限をすることはありませんが、これ単体での有償配布は行わないでください。\nまた、不特定多数に向けたこれ単体での再配布も基本NGとさせていただきます。\n\n","url":"https://booth.pm/ja/items/1306657","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/029a6605-a6bb-4972-a811-0c155ec2ed4d/i/1306657/e2350f5c-b540-4eaf-84e6-9045d2d5adda_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="g/NnN7lL5AMHdhL/Axvswt0TnlXFUZoSvHmysdjFscw="></script>
+    nonce="hx+rfrQRxHc8D50fZ3sh0qpxqdRfeDSxHObKhuEvhlg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1306657/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1742
+                              1743
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1306657/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1742
+                              1743
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
