--- a/VRChat/98/1306398.html
+++ b/VRChat/98/1306398.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "a0bls65NvqZqk7eRK5GcOnoCYpSdxY3elu0/KzSE0ng="></script>
+    "aM56snE5DkPuRQREmvo+NS1n/wOBy/MiJFIyOVtGFmI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【PC版VRChat向け】5色のミニスカート","description":"【PC版VRChat向け】\nファッションのバリエーションとして、5種類のカラーバリエーションテクスチャの入ったスカートを用意しました！\n\n2022年5月7日　Phys Bonesへの対応版をリリースしました。\nDynamic Bone対応版は旧バージョンとして残してあります。\nShaderをliltoonへ変更しました。\n\n---旧仕様の説明---\nDynamic Boneが導入済みなら、設定もPrefabにて済ませたものがすぐ使えます。\nまた、負荷低減に配慮したDynamic Bone6本バージョンと\n柔らかく揺れることを重視したDynamic Bone40本バージョンの\n使い分けれる２つのバリエーションを用意しております。\n\nスカートの色変えは、マテリアルにセットするテクスチャを変えるだけですぐできます！\nコーディネイトのバリエーションとしていかがでしょうか？\n\n\n更新履歴\n2022/5/7 ver1.2リリース Phys Bonesに対応。Unityバージョンを2019.4.31fに変更。Shaderをliltoonに変更。\n2020/4/9 ver1.1リリース arktoon-shaderを最新版に更新。Unity2018版VRCにあわせ、テクスチャ設定を更新\n2019/04/06 ver1.0.0リリース\n","url":"https://booth.pm/ja/items/1306398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/d93c3674-a136-49a1-a2f3-9a8202a223cd/i/1306398/f65bfa86-fd4a-416f-a108-d31d00fa42a3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a0bls65NvqZqk7eRK5GcOnoCYpSdxY3elu0/KzSE0ng="></script>
+    nonce="aM56snE5DkPuRQREmvo+NS1n/wOBy/MiJFIyOVtGFmI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1306398/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1306398/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               118
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
