--- a/VRChat/47/1301947.html
+++ b/VRChat/47/1301947.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AsJZXBR6ZPXMXBGcyh6bewvCsRTfzHXZZ1fAJZhso14="></script>
+    "WDNQqvTTBfeuC1lqpFnHvD6zN3EkNfrhTbvRK+sEgWw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ウニ","description":"[これいる？]\n\nウニです\n5754ポリゴン\n\n\n\n[一応の利用規約]\n\n改変・再配布ご自由に\n\n自作発言する人なんていないだろうし\nこんなんでしてもって感じだけど\nまぁ一応しないでね\n\nただしこいつの利用は節度を守ってお願いします\n迷惑行為等には使用しないでください\n報告があり次第、無期限の配信停止をします\nあと先端恐怖症の人にはぶつけないであげてください\n\n\n\n[制作]\nあしっど\nTwitter ID:@acid_aine\n\n連絡はTwitterの方まで\n\n\n\n[ウニガチャ]\n\nhttps://shindanmaker.com/586328","url":"https://booth.pm/ja/items/1301947","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9849ed29-b5f0-4585-b783-512af5c80a93/i/1301947/0920ae94-5eb3-46eb-8c36-c7991108a0e7_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AsJZXBR6ZPXMXBGcyh6bewvCsRTfzHXZZ1fAJZhso14="></script>
+    nonce="WDNQqvTTBfeuC1lqpFnHvD6zN3EkNfrhTbvRK+sEgWw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1301947/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1301947/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               98
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
