--- a/VRChat/18/1301218.html
+++ b/VRChat/18/1301218.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HqKKJ9Eqcct/BB4dyVb3TPuPNOT67h2oaFyLt8P0c78="></script>
+    "xCcFm8Ntw+Aop7XDUEgp7rqHMLurB3G57dHq3OjOR/g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dmodel】 ウィングマソ","description":"マテリアルはいつも一つ！\n某有名FPSゲーのウィ〇ングマン3Dモデルです。\n（注　写真はimageです）\n\nStandard(Roughness setup)シェーダーを想定して作成しております\n\n商品内容\nFBXモデル\nテクスチャ（png 4096*4096 basecolor,emissive,height,matellic,nomal,roughness 計6枚）\nマテリアル\n\n改変自由\n\n禁止事項\n再配布\n使用ソフトの規約に反する行為\n購入者が当商品を製作者及び購入者以外の第3者が、入手または購入者と同程度の使用が可能となる状況にすること\n\n購入者がこの商品を使用して起きたあらゆる損害に関し製作者つじノシカは一切の責任を負いません","url":"https://booth.pm/ja/items/1301218","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2692783f-714e-4ffd-b82f-df2b0cffb130/i/1301218/c41d8560-3fac-433d-9096-6fa458395819_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HqKKJ9Eqcct/BB4dyVb3TPuPNOT67h2oaFyLt8P0c78="></script>
+    nonce="xCcFm8Ntw+Aop7XDUEgp7rqHMLurB3G57dHq3OjOR/g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1301218/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              972
+                              973
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1301218/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              972
+                              973
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
