--- a/VRChat/55/1300755.html
+++ b/VRChat/55/1300755.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AZ8/gSRpJOvYgI0lXjUVQKxoyFUaBzwGksNNg59WzYY="></script>
+    "XeZEwP0E26xkdA2ewkdGEFYcESiGHnMsR5pgel3GQYE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"TECHNO VINEGAR(3Dmodel,Shader)","description":"TECHNO VINEGAR(3Dモデル,Shader)\n\nお酢と快物質(shader)がセットになって無料！\n君もテクノビネガーを所持しよう！\n※刺激の強い成分(shader)が含まれています。他者の迷惑にならない様に注意して使用してください。\n※音楽は別売りです。購入はこちらから。\nhttps://digitalghost.booth.pm/items/1290778\n\n内容物\nTECHNO VINEGAR.unitypackage\n\n利用規約\n・VRChatでのWorld(但し非PublicWorldに限る)やAvatar(但しペデスタル等のアバターに組み込んで誰でも使える状態にする事を禁ずる)に組み込む形での利用を想定しています\n・改変可。ただし変更後のデータに関しても作者である obake(3Dモデル、Texture),butadiene(Trip_Raymach shader) が著作権を有する\n・公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での使用を禁ずる\n・データ自体を取引・譲渡を目的としてアップロード、送信などを行うことを禁ずる\n・VRChat以外での使用を禁ずる\n・営利目的での使用を禁ずる (但し例外として、営利目的でのストリーミング配信(twitch,Youtubelive等)に\"映り込む”程度であればこの限りではない)\n・本データ使用によって生じた損害に対して作者は一切の責任を負いません\n・規約は以降も予告なく変更する場合がある\n・使用時点をもって本規約に同意したものとする\n\n\n","url":"https://booth.pm/ja/items/1300755","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5165bc33-ddcf-43cf-b48e-ccca6f90dfde/i/1300755/053b6b22-4cef-440f-bf77-f8c5ad408b7e_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AZ8/gSRpJOvYgI0lXjUVQKxoyFUaBzwGksNNg59WzYY="></script>
+    nonce="XeZEwP0E26xkdA2ewkdGEFYcESiGHnMsR5pgel3GQYE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1300755/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               308
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1300755/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               308
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
