--- a/VRChat/93/1299193.html
+++ b/VRChat/93/1299193.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MX99Uh1OewGPff+ij7sPoSNjgWv6PYTJsyWdZbHFC7I="></script>
+    "qrHeoVm2NqDi9ggaJV1VBQ+pV/FnBkF73YQrWGYTjf0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【３Dモデル】望美【Vroid】","description":"Vroidを使用して制作しています\n\nモデル名は望美です\n\n・Vrmファイルです\n・VRchatへの導入や\n　MMDへの変換はご自身で行ってください\n\n\n再配布禁止\n動画の広告収入などでの商用利用可\n\n不明なことがございましたら肯定ちゃんのTwitterまでご連絡ください。\n","url":"https://booth.pm/ja/items/1299193","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/93b330b0-6f36-4fe2-8e89-b1b60919e662/i/1299193/021464b9-eb3e-4a91-b428-e22b743bb5f5_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MX99Uh1OewGPff+ij7sPoSNjgWv6PYTJsyWdZbHFC7I="></script>
+    nonce="qrHeoVm2NqDi9ggaJV1VBQ+pV/FnBkF73YQrWGYTjf0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1299193/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1299193/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               58
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
