--- a/VRChat/22/1293822.html
+++ b/VRChat/22/1293822.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "M6GWHIDGytLbrWlD6xqkZBbk40L5ew2UoBMTY8wziQE="></script>
+    "24gFEZbM1qIklqvFfuYAR6aZNAqk9k4C8/3i2mtsKmE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【悪役結社ヴァリアールファンアイテム】ヴァリアライズチョーカー","description":"　バーチャル世界の悪の組織、『悪役結社ヴァリアール』のファン向け公式アイテムが遂に登場。\n\n　恐るべき結社を慕い崇める仮想市民諸君の有様を具象し、『発信機・自爆装置付きの首輪を自ら身に着ける』という形を取らせて貰ったぞ。\n\n　DynamicBoneで揺れるドッグタグに好きな文言を彫り込む方法の指南付きだ。これで貴様も『札付き』という訳だな。尚腕輪等として使っても構わない。\n\nこれを身に着け、より一層結社への忠誠を高めるが良い。\n\n\n\n\n◆VAREAL　LICENSED◆ \n本商品は『ヴァリアールライセンス』認可商品である。\n『ヴァリアールライセンス』とは、バーチャル世界の悪の組織、『悪役結社ヴァリアール』が公式に関連商品と認めたもののみに発行されるロゴマーク及びタグである。 『ヴァリアールライセンス』の詳細は下記URLを参照とする。\nhttps://vrheel.com/license/\n◆VAREAL　LICENSED◆\n\n\n\n\n◆利用規約◆\n本商品単体での再配布、及び本商品を含む３Dモデルの販売を禁ずる。\nアバターの一部、アクセサリーとしてのアップロード及び改変を許可する。\n本商品を含む改変アバターのVRchatにおけるペデスタル設置及びクローニングを許可する。（アバター本体の規約に従うこと）\n有償無償問わず動画配信への映り込みを許可する。クレジット不要。\n政治宗教に関わる利用及び『悪役結社ヴァリアール』の名誉を損ねる利用を禁ずる。\n本モデル使用に伴うトラブルについて当方は一切関知しない。\n\n\n\n使用マテリアル　PBT-Shader　（MITライセンス）\nhttps://yosohuta.booth.pm/items/1266870\n\n","url":"https://booth.pm/ja/items/1293822","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/75409dcf-e181-4290-a053-65156c11a7c3/i/1293822/5653fac4-fd8c-4380-8d61-4a413683a76c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="M6GWHIDGytLbrWlD6xqkZBbk40L5ew2UoBMTY8wziQE="></script>
+    nonce="24gFEZbM1qIklqvFfuYAR6aZNAqk9k4C8/3i2mtsKmE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1293822/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1293822/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
