--- a/VRChat/16/1299116.html
+++ b/VRChat/16/1299116.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "i2L4k4i1P6afj+kg3dpOQXR8iym27GRsTZu6SFwlfKw="></script>
+    "CITYZVqaBwH8to0nT4+58WpHZvM4RWk3JRFVx3NW0eQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アレッガ自叙伝 ～僕が蕎麦屋の戦闘機になったわけ～","description":"～更新～\nもう4年経ったので無料になりました！\n\nそれ以降のモデリング周りのお話はこちらをどうぞ↓\nウォーパルド航空開発研究所戦闘機開発カタログ\nhttps://ymz80a.booth.pm/items/931983\n\n\nアレッガの技術屋さんが蕎麦屋従業員になった経緯や\nそもそもシューティングゲームに興味を持ったかつらつらと書かれた書籍。\n内容はマッハ新書に近く、自叙伝にも近い。そんなフランクな読み物です。\n\n全13ページ　9749文字","url":"https://booth.pm/ja/items/1299116","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1299116/555ae19e-e8ed-4882-9ef6-4a75dac92645_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="i2L4k4i1P6afj+kg3dpOQXR8iym27GRsTZu6SFwlfKw="></script>
+    nonce="CITYZVqaBwH8to0nT4+58WpHZvM4RWk3JRFVx3NW0eQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1299116/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1299116/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               9
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
